added new likes page and additional styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
+<nav>
+  <ul>
+    <li><a href="#">Instructor Bios</a></li>
+    <li><a href="likes.html">How to Bribe Instructors</a></li>
+  </ul>
+</nav>
 <div id="instructors">
       <section>
         <h4> Our instructors are big ol' weirdos.</h4>
